--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -1,4 +1,10 @@
 .content__wrapper {
+  padding: 0 20px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 60px;
+  }
+
   @media (min-width: $desktop-width) {
     padding: 0;
     width: 1200px;
@@ -15,7 +21,7 @@
 .content__description {
   margin: 0 auto;
   max-width: 458px;
-  padding: 0 20px 20px;
+  padding: 0 20px 50px;
   text-align: center;
   text-transform: uppercase;
 
@@ -32,6 +38,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  position: relative;
 
   @media (min-width: $tablet-width) {
     display: grid;
@@ -40,5 +47,14 @@
 
   @media (min-width: $desktop-width) {
     grid-template-columns: repeat(3, 33.333%);
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: -25px;
+    height: 1px;
+    width: 100%;
+    background-color: $decor-color;
   }
 }
