--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -22,17 +22,17 @@
 }
 
 .reviews__form {
-  padding: 0 6%;
+  padding: 0 20px 24px;
 
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: repeat(2, 50%);
-    padding: 102px 8% 0;
+    padding: 102px 60px 64px;
   }
 
   @media (min-width: $desktop-width) {
     grid-template-columns: 51% 49%;
-    padding: 67px 10% 0;
+    padding: 67px 120px 61px;
   }
 }
 
@@ -58,7 +58,6 @@
 .reviews__button {
   display: block;
   max-width: 280px;
-  margin: 0 auto;
   padding: 16px 49px;
 }
 
@@ -71,6 +70,7 @@
   color: rgba(51, 51, 51, 0.6);
 
   @media (min-width: $tablet-width) {
-    grid-column: 1/3;
+    grid-column: 2/3;
+    padding: 23px 0 14px;
   }
 }
