--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -8,6 +8,7 @@ $intro-back-color: #3f5e72;
 $menu-current-color: #766357;
 $hover-color: #669EC0;
 $active-color: #5496BD;
+$decor-color: #e5e5e5;
 
 // Viewports
 
