--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -1,10 +1,26 @@
-.gallery__item--first {
-  @media (min-width: $tablet-width) {
-    grid-column: 1/3;
+.gallery__item {
+  position: relative;
+  padding-top: 25px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    height: 1px;
+    width: 100%;
+    background-color: $decor-color;
   }
 
-  @media (min-width: $desktop-width) {
-    grid-column: 1/4;
+  &--first {
+    padding-top: 0;
+
+    @media (min-width: $tablet-width) {
+      grid-column: 1/3;
+    }
+
+    @media (min-width: $desktop-width) {
+      grid-column: 1/4;
+    }
   }
 }
 
@@ -87,6 +103,8 @@
 }
 
 .gallery__number-likes {
+  font-weight: 700;
+
   @media (min-width: $tablet-width) {
     grid-column: 2/3;
     grid-row: 1/3;
