--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,8 +1,20 @@
 .intro__wrapper {
+  position: relative;
   background:
-    url("../img/intro-triangl.svg") no-repeat center,
+    //url("../img/intro-triangl.svg") no-repeat center,
     $intro-back-color url("../img/background.jpg") no-repeat 50% 0;
   background-size: cover;
+
+  &::after {
+    content: "";
+    width: 100%;
+    height: 57px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: $white-color;
+    clip-path: polygon(100% 100%, 100% 56%, 79% 79%, 79% 56%, 50% 100%, 21% 56%, 21% 79%, 0 56%, 0 100%);
+  }
 }
 
 .intro__logo {
