--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -9,6 +9,8 @@ $menu-current-color: #766357;
 $hover-color: #669EC0;
 $active-color: #5496BD;
 $decor-color: #e5e5e5;
+$input-decor-color: #e6e6e6;
+$line-color: #DBDBDB;
 
 // Viewports
 
