--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -1,16 +1,3 @@
-.content__wrapper {
-  padding: 0 20px;
-
-  @media (min-width: $tablet-width) {
-    padding: 0 60px;
-  }
-
-  @media (min-width: $desktop-width) {
-    padding: 0;
-    width: 1200px;
-  }
-}
-
 .content__title {
   margin: 0;
   padding-top: 30px;
@@ -56,5 +43,9 @@
     height: 1px;
     width: 100%;
     background-color: $decor-color;
+
+    @media (min-width: $tablet-width) {
+      content: none;
+    }
   }
 }
