--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -2,6 +2,10 @@
   position: relative;
   padding-top: 25px;
 
+  @media (min-width: $tablet-width) {
+    padding-top: 0;
+  }
+
   &::after {
     content: "";
     position: absolute;
@@ -9,6 +13,10 @@
     height: 1px;
     width: 100%;
     background-color: $decor-color;
+
+    @media (min-width: $tablet-width) {
+      content: none;
+    }
   }
 
   &--first {
@@ -26,6 +34,7 @@
 
 .gallery__link {
   display: block;
+  position: relative;
   padding-bottom: 25px;
   text-decoration: none;
   color: $black-color;
@@ -40,19 +49,24 @@
 .gallery__image {
   display: block;
   width: 100%;
-
-  @media (min-width: $tablet-width) {
-    flex: 0 1 83.333%;
-  }
 }
 
 .gallery__photo-information {
 
   @media (min-width: $tablet-width) {
     display: grid;
-    grid-template-columns: 210px 74px;
+    grid-template-columns: 3fr 1fr;
     padding: 22px 20px 15px;
     background-color: $input-back-color;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    color: $white-color;
+    background-color: rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -85,21 +99,27 @@
 
 .gallery__button {
   padding: 0;
-  margin-right: 14px;
+  margin: 0;
+  text-align: end;
   border: none;
   background-color: transparent;
 
   @media (min-width: $tablet-width) {
     margin-left: auto;
+    padding: 6px 0 12px;
     grid-column: 2/3;
     grid-row: 1/3;
-    order: 2;
   }
 }
 
 .gallery__button-icon {
   fill: $black-color;
   opacity: 0.3;
+
+  @media (min-width: $desktop-width) {
+    fill: $white-color;
+    opacity: 1;
+  }
 }
 
 .gallery__number-likes {
@@ -108,6 +128,10 @@
   @media (min-width: $tablet-width) {
     grid-column: 2/3;
     grid-row: 1/3;
-    order: 1;
+    padding-left: 9px;
+  }
+
+  @media (min-width: $desktop-width) {
+    color: $white-color;
   }
 }
