--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -3,35 +3,56 @@
   padding-top: 36px;
   padding-bottom: 24px;
   text-align: center;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 64px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 115px;
+  }
 }
 
 .reviews__description {
   margin: 0 auto;
-  padding: 0 20px 28px;
+  padding: 0 calc((100% - 435px) / 2) 28px;
   max-width: 435px;
   text-transform: uppercase;
   text-align: center;
 
   @media (min-width: $tablet-width) {
-    padding: 0 107px;
+    padding-bottom: 102px;
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0 263px;
+    padding-bottom: 67px;
   }
 }
 
 .reviews__form {
-  padding: 0 20px 24px;
+  padding: 0 0 24px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    height: 1px;
+    width: 100%;
+    background-color: $decor-color;
+
+    @media (min-width: $tablet-width) {
+      content: none;
+    }
+  }
 
   @media (min-width: $tablet-width) {
     display: grid;
-    grid-template-columns: repeat(2, 50%);
-    padding: 102px 60px 64px;
+    grid-template-columns: repeat(2, 1fr);
+    padding-bottom: 64px;
   }
 
   @media (min-width: $desktop-width) {
-    grid-template-columns: 51% 49%;
     padding: 67px 120px 61px;
   }
 }
@@ -39,6 +60,36 @@
 .reviews__field-group {
   margin: 0;
   padding: 0 0 24px;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    height: 1px;
+    width: 100%;
+    background-color: $decor-color;
+
+    @media (min-width: $tablet-width) {
+      content: none;
+    }
+  }
+
+  &--decor {
+    position: relative;
+
+    &::after {
+      @media (min-width: $tablet-width) {
+        content: "";
+        position: absolute;
+        top: -54px;
+        right: 0;
+        width: 1px;
+        height: 100%;
+        background-color: $line-color;
+      }
+    }
+  }
 
   @media (min-width: $tablet-width) {
     padding-bottom: 48px;
@@ -49,8 +100,32 @@
   }
 
   &--row {
+    position: relative;
+
+    &::before {
+      @media (min-width: $tablet-width) {
+        content: "";
+        position: absolute;
+        top: -40px;
+        width: 100%;
+        height: 1px;
+        z-index: -1;
+        background-color: $line-color;
+      }
+    }
+
     @media (min-width: $tablet-width) {
       grid-column: 1/3;
+    }
+  }
+
+  &--line {
+    &::after {
+      content: none;
+    }
+
+    &::before {
+      top: 12px;
     }
   }
 }
