--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -1,11 +1,14 @@
 .container {
   margin: 0 auto;
+  padding: 0 20px;
 
   @media (min-width: $tablet-width) {
     min-width: 648px;
+    padding: 0 60px;
   }
 
   @media (min-width: $desktop-width) {
+    padding: 0;
     max-width: 1200px;
   }
 }
