--- a/source/sass/blocks/field-group.scss
+++ b/source/sass/blocks/field-group.scss
@@ -8,8 +8,17 @@
   text-align: center;
 
   @media (min-width: $tablet-width) {
+    padding-top: 0;
     padding-bottom: 28px;
     background-color: $white-color;
+  }
+
+  &--decor {
+    @media (min-width: $tablet-width) {
+      padding-left: 60px;
+      padding-right: 60px;
+      max-width: 308px;
+    }
   }
 }
 
@@ -20,12 +29,20 @@
     width: 86.5%;
   }
 
+  @media (min-width: $desktop-width) {
+    width: 430px;
+  }
+
   &:not(:last-child) {
     margin-bottom: 16px;
   }
 
-  &--decor {
+  &--contacts {
     position: relative;
+
+    @media (min-width: $desktop-width) {
+      max-width: 402px;
+    }
 
     &::after {
       content: "";
@@ -64,7 +81,6 @@
   }
 
   @media (min-width: $desktop-width) {
-    justify-content: start;
     padding: 17px 53px;
     gap: 28px;
   }
@@ -76,7 +92,7 @@
     }
 
     @media (min-width: $desktop-width) {
-      padding: 31px 40px;
+      padding: 31px 44px;
       gap: 64px;
       align-items: center;
     }
@@ -89,10 +105,10 @@
 
   &:not(:last-child) {
     margin-bottom: 16px;
-  }
 
-  @media (min-width: $tablet-width) {
-    margin: 0;
+    @media (min-width: $tablet-width) {
+      margin: 0;
+    }
   }
 
   @media (min-width: $desktop-width) {
@@ -119,8 +135,10 @@
     text-align: center;
 
     @media (min-width: $tablet-width) {
-      padding: 0 0 28px;
-      font-size: 21px;
+      padding: 0 60px 28px;
+      max-width: 308px;
+      margin: 0 auto;
+      background-color: $white-color;
     }
   }
 }
