added scss modal

--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -16,4 +16,12 @@
 .copyright__link-icon {
   display: block;
   fill: $black-color;
+
+  &:hover {
+    fill: $primary-back-color;
+  }
+
+  &:active {
+    fill: $active-icon-color;
+  }
 }
