--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -6,11 +6,13 @@ $advantages-color: #eeeeee;
 $secondary-color: #333333;
 $intro-back-color: #3f5e72;
 $menu-current-color: #766357;
-$hover-color: #669EC0;
-$active-color: #5496BD;
+$hover-color: #669ec0;
+$active-color: #5496bd;
 $decor-color: #e5e5e5;
 $input-decor-color: #e6e6e6;
-$line-color: #DBDBDB;
+$line-color: #dbdbdb;
+$active-icon-color: #b3b3b3;
+$active-input-color: #d5d5d5;
 
 // Viewports
 
