--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -22,6 +22,14 @@
   text-transform: uppercase;
   text-decoration: none;
   color: $black-color;
+
+  &:hover {
+    color: $primary-back-color;
+  }
+
+  &:active {
+    color: $active-icon-color;
+  }
 }
 
 .main-footer__social {
