--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,33 +1,98 @@
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 5;
+}
+
+.modal-close {
+  display: none;
+}
+
 .modal__wrapper {
-  width: 280px;
+  max-width: 320px;
+  position: relative;
+  margin: auto;
+  padding-top: 45px;
+  padding-bottom: 35px;
+  text-align: center;
+  background-color: #ffffff;
+  box-shadow: 0 7px 15px 0 rgba(0, 1, 1, 0.15);
+
+  @media (min-width: $tablet-width) {
+    max-width: 400px;
+    padding-top: 54px;
+    padding-bottom: 49px;
+  }
+
+  &--correct {
+    padding-top: 39px;
+    padding-bottom: 0;
+
+    @media (min-width: $tablet-width) {
+      max-width: 640px;
+      padding-top: 52px;
+    }
+  }
 }
 
 .modal__title {
   margin: 0;
-  padding: 45px 38px 25px;
+  padding: 0 42px 25px;
 
-  &--correct {
-    padding-top: 39px;
+  @media (min-width: $tablet-width) {
+    padding-left: 80px;
+    padding-right: 80px;
+    font-size: 30px;
+    line-height: 40px;
   }
 }
 
 .modal__description {
   margin: 0;
-  padding-left: 33px;
-  padding-right: 33px;
-  padding-bottom: 28px;
+  padding: 0 41px 28px;
   text-align: center;
   text-transform: uppercase;
   color: $secondary-color;
+
+  @media (min-width: $tablet-width) {
+    padding-bottom: 46px;
+  }
+
+  &--correct {
+    @media (min-width: $tablet-width) {
+      padding: 0 110px 50px;
+    }
+  }
 }
 
 .modal__button {
+  width: 180px;
   font-size: 18px;
-  padding: 16px 78px;
+  padding: 16px 63px;
+
+  @media (min-width: $tablet-width) {
+    width: 272px;
+  }
+
+  &--correct {
+    width: 100%;
+    padding-left: 61px;
+    padding-right: 61px;
+    border: 20px solid $input-back-color;
+
+    @media (min-width: $tablet-width) {
+      padding-left: 140px;
+      padding-right: 140px;
+      border-width: 44px;
+      border-left-width: 91px;
+      border-right-width: 91px;
+    }
+  }
 }
 
-.modal__button--correct {
-  padding-left: 56px;
-  padding-right: 56px;
-  border: 20px solid $input-back-color;
-}
+
