--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -33,7 +33,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    grid-template-columns: repeat(3, 33.333%);
+    grid-template-columns: repeat(3, 1fr);
   }
 
   &::before {
