--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -13,6 +13,7 @@ $input-decor-color: #e6e6e6;
 $line-color: #dbdbdb;
 $active-icon-color: #b3b3b3;
 $active-input-color: #d5d5d5;
+$item-line-color: #d6d6d6;
 
 // Viewports
 
