--- a/source/sass/blocks/field-group.scss
+++ b/source/sass/blocks/field-group.scss
@@ -6,6 +6,7 @@
   padding-top: 24px;
   padding-bottom: 20px;
   text-align: center;
+  margin: 0 auto;
 
   @media (min-width: $tablet-width) {
     padding-top: 0;
