--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -12,10 +12,15 @@
     bottom: 0;
     height: 1px;
     width: 100%;
+    padding-right: 30px;
+    padding-left: 30px;
+    margin-left: -40px;
     background-color: $decor-color;
 
     @media (min-width: $tablet-width) {
       content: none;
+      padding: 0;
+      margin: 0;
     }
   }
 
@@ -49,6 +54,18 @@
 .gallery__image {
   display: block;
   width: 100%;
+  max-height: 280px;
+  object-fit: cover;
+
+  @media (min-width: $tablet-width) {
+    max-height: 267px;
+  }
+
+  &--first {
+    @media (min-width: $tablet-width) {
+      max-height: 400px;
+    }
+  }
 }
 
 .gallery__photo-information {
