--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -3,14 +3,19 @@
 }
 
 .main-footer__wrapper {
-  padding: 38px 60px 29px 45px;
+  padding: 38px 60px 29px;
   text-align: center;
 
   @media (min-width: $tablet-width) {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 36px 120px 36px 104px;
+    padding: 36px 60px 36px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 120px;
+    padding-right: 120px;
   }
 }
 
