--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -40,10 +40,15 @@
     top: 0;
     height: 1px;
     width: 100%;
+    padding-right: 30px;
+    padding-left: 30px;
+    margin-left: -40px;
     background-color: $decor-color;
 
     @media (min-width: $tablet-width) {
       content: none;
+      padding: 0;
+      margin: 0;
     }
   }
 
@@ -70,10 +75,15 @@
     bottom: 0;
     height: 1px;
     width: 100%;
+    padding-right: 30px;
+    padding-left: 30px;
+    margin-left: -40px;
     background-color: $decor-color;
 
     @media (min-width: $tablet-width) {
       content: none;
+      padding: 0;
+      margin: 0;
     }
   }
 
@@ -155,7 +165,7 @@
 .reviews__button {
   display: block;
   max-width: 280px;
-  padding: 16px 49px;
+  padding: 16px 48px;
 }
 
 .reviews__legend {
