--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -5,7 +5,7 @@
 .location__map {
   display: block;
   width: 100%;
-  background-image: url("../img/map-mobile.jpg");
+  background-image: url("../img/map-desktop.jpg");
   background-position: center;
   background-repeat: no-repeat;
 
