--- a/source/sass/blocks/search.scss
+++ b/source/sass/blocks/search.scss
@@ -9,11 +9,15 @@
   @media (min-width: $tablet-width) {
     padding: 61px 0 58px;
   }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 65px;
+  }
 }
 
 .search__title {
   margin: 0;
-  padding-bottom: 18px;
+  padding-bottom: 22px;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
@@ -21,25 +25,32 @@
 
   @media (min-width: $tablet-width) {
     font-size: 30px;
+    padding-bottom: 32px;
   }
 }
 
 .search__description {
   margin: 0;
   max-width: 435px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
   padding-bottom: 32px;
   text-transform: uppercase;
   color: $secondary-color;
 
   @media (min-width: $tablet-width) {
     width: 435px;
+    padding-bottom: 41px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-bottom: 46px;
   }
 }
 
 .search__button {
   display: block;
+  min-width: 284px;
   max-width: 458px;
   padding: 16px 45px;
 
