--- a/source/sass/blocks/field-group.scss
+++ b/source/sass/blocks/field-group.scss
@@ -3,7 +3,7 @@
 }
 
 .field-group__title {
-  padding-top: 24px;
+  padding-top: 25px;
   padding-bottom: 20px;
   text-align: center;
   margin: 0 auto;
@@ -16,9 +16,19 @@
 
   &--decor {
     @media (min-width: $tablet-width) {
-      padding-left: 60px;
-      padding-right: 60px;
-      max-width: 308px;
+      padding-left: 62px;
+      padding-right: 62px;
+      max-width: 277px;
+    }
+  }
+
+  &--contacts {
+    @media (min-width: $tablet-width) {
+      padding-left: 7px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding-left: 0;
     }
   }
 }
@@ -137,7 +147,7 @@
 
     @media (min-width: $tablet-width) {
       padding: 0 60px 28px;
-      max-width: 308px;
+      max-width: 282px;
       margin: 0 auto;
       background-color: $white-color;
     }
