--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -1,6 +1,6 @@
 .gallery__item {
   position: relative;
-  padding-top: 25px;
+  padding-top: 24px;
 
   @media (min-width: $tablet-width) {
     padding-top: 0;
@@ -40,7 +40,7 @@
 .gallery__link {
   display: block;
   position: relative;
-  padding-bottom: 25px;
+  padding-bottom: 26px;
   text-decoration: none;
   color: $black-color;
 
@@ -89,6 +89,7 @@
 .gallery__title {
   margin: 0;
   padding-top: 15px;
+  font-size: 14px;
   text-transform: uppercase;
   font-weight: 700;
 
@@ -100,29 +101,31 @@
 .gallery__author {
   margin: 0;
   text-decoration: none;
-  padding-bottom: 10px;
+  padding-bottom: 11px;
 
   cite {
     font-style: normal;
   }
 
   @media (min-width: $tablet-width) {
-    padding: 0;
+    padding: 1px 0 0;
     grid-column: 1/2;
     grid-row: 2/3;
   }
 }
 
 .gallery__button {
+  max-height: 26px;
   padding: 0;
   margin: 0;
+  font-size: 14px;
   text-align: end;
-  border: none;
+  color: $black-color;
   background-color: transparent;
 
   @media (min-width: $tablet-width) {
     margin-left: auto;
-    padding: 6px 0 12px;
+    padding: 5px 0 12px;
     grid-column: 2/3;
     grid-row: 1/3;
   }
@@ -139,7 +142,7 @@
 }
 
 .gallery__number-likes {
-  font-weight: 700;
+  padding-left: 10px;
 
   @media (min-width: $tablet-width) {
     grid-column: 2/3;
@@ -149,5 +152,6 @@
 
   @media (min-width: $desktop-width) {
     color: $white-color;
+    padding-left: 6px;
   }
 }
