--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -16,14 +16,14 @@
     left: 0;
     margin-bottom: -1px;
     background-color: $white-color;
-    clip-path: polygon(100% 100%, 100% 56%, 50% 100%, 0 56%, 0 100%);
+    clip-path: polygon(100% 100%, 100% 53%, 50% 100%, 0 53%, 0 100%);
 
     @media (min-width: $tablet-width) {
       clip-path: polygon(100% 100%, 100% 36%, 96% 40%, 96% 0%, 50% 100%, 4% 0%, 4% 40%, 0% 36%, 0 100%);
     }
 
     @media (min-width: $desktop-width) {
-      clip-path: polygon(100% 100%, 100% 0%, 79% 37%, 79% 2%, 50% 100%, 21% 1%, 21% 38%, 0% 0%, 0 100%);
+      clip-path: polygon(100% 100%, 100% 2%, 79% 44%, 79% 2%, 50% 100%, 21% 2%, 21% 44%, 0% 2%, 0% 100%);
     }
   }
 }
