--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -3,16 +3,13 @@
   padding: 0;
   list-style: none;
   display: flex;
+  gap: 6px;
   justify-content: center;
 }
 
 .social__item {
   min-width: 48px;
   min-height: 24px;
-}
-
-.social__item + .social__item {
-  margin-left: 6px;
 }
 
 .social__link {
@@ -24,7 +21,12 @@
 .social__link-icon {
   fill: $white-color;
 
+  @media (min-width: $tablet-width) {
+    padding: 2px 0;
+  }
+
   &:active {
+    padding: 2px 0;
     opacity: 0.3;
   }
 }
