--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,10 +1,13 @@
 .intro__wrapper {
   position: relative;
-  background: $intro-back-color url("../img/background.jpg") no-repeat bottom;
-  background-size: 901px 389px;
+  background-color: $intro-back-color;
+  background-image: url("../img/intro-triangle-desktop.svg"), url("../img/background.jpg");
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: auto, 901px 389px;
 
   @media (min-width: $tablet-width) {
-    background-size: cover;
+    background-size: auto, cover;
   }
 
   @media (min-resolution: 2dppx) {
@@ -18,32 +21,12 @@
       background-size: inherit;
     }
   }
-
-  &::after {
-    content: "";
-    width: 100%;
-    height: 57px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    margin-bottom: -1px;
-    background-color: $white-color;
-    clip-path: polygon(100% 100%, 100% 53%, 50% 100%, 0 53%, 0 100%);
-
-    @media (min-width: $tablet-width) {
-      clip-path: polygon(100% 100%, 100% 36%, 96% 40%, 96% 0%, 50% 100%, 4% 0%, 4% 40%, 0% 36%, 0 100%);
-    }
-
-    @media (min-width: $desktop-width) {
-      clip-path: polygon(100% 100%, 100% 2%, 79% 44%, 79% 2%, 50% 100%, 21% 2%, 21% 44%, 0% 2%, 0% 100%);
-    }
-  }
 }
 
 .intro__logo {
   display: block;
   margin: 0 auto;
-  padding: 90px 0 85px;
+  padding: 90px 0 86px;
 
   @media (min-width: $tablet-width) {
     padding: 78px 0 90px;
