--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -151,6 +151,10 @@
   &--food {
     padding-left: 50px;
 
+    @media (min-width: $tablet-width) {
+      padding-right: 50px;
+    }
+
     &::before {
       width: 40px;
       height: 35px;
@@ -159,6 +163,8 @@
       @media (min-width: $tablet-width) {
         width: 76px;
         height: 68px;
+        top: 63px;
+        left: calc(50% - 39px);
         background-size: 76px 68px;
       }
     }
@@ -235,7 +241,12 @@
   }
 
   &--second {
+    padding-top: 40px;
     padding-bottom: 35px;
+
+    @media (min-width: $tablet-width) {
+      padding: 3px 0 0;
+    }
   }
 }
 
@@ -286,6 +297,10 @@
 .advantages__number {
   text-transform: uppercase;
   padding-top: 11px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 14px;
+  }
 }
 
 .advantages__description {
