--- a/source/sass/blocks/location.scss
+++ b/source/sass/blocks/location.scss
@@ -1,5 +1,10 @@
 .location__wrapper {
   min-width: 320px;
+  padding-bottom: 10px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0;
+  }
 }
 
 .location__map {
