--- a/source/sass/blocks/search.scss
+++ b/source/sass/blocks/search.scss
@@ -32,15 +32,13 @@
 .search__description {
   margin: 0;
   max-width: 435px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 32px;
+  padding: 0 20px 32px;
   text-transform: uppercase;
   color: $secondary-color;
 
   @media (min-width: $tablet-width) {
     width: 435px;
-    padding-bottom: 41px;
+    padding-bottom: 40px;
   }
 
   @media (min-width: $desktop-width) {
