--- a/source/sass/blocks/main-navigation.scss
+++ b/source/sass/blocks/main-navigation.scss
@@ -53,10 +53,14 @@
 }
 
 .main-navigation__list {
-  list-style: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
   margin: 0;
   padding: 0;
   z-index: 4;
+  list-style: none;
 
   &--visible {
     display: none;
@@ -79,6 +83,7 @@
   }
 
   @media (min-width: $tablet-width) {
+    position: static;
     min-width: 768px;
     max-width: 1200px;
     display: grid;
