--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -5,6 +5,7 @@
 .copyright__link {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   text-decoration: none;
   color: $black-color;
 
