--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -1,4 +1,8 @@
 .video__wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   padding-top: 17px;
   text-align: center;
 
@@ -38,9 +42,13 @@
 
 .video__image-container {
   position: relative;
+  width: 100%;
+
+  @media (min-width: $tablet-width) {
+    max-width: 800px;
+  }
 
   @media (min-width: $desktop-width) {
-    max-width: 800px;
     padding: 0 200px;
   }
 }
@@ -48,6 +56,12 @@
 .video__content-image {
   display: block;
   width: 100%;
+  max-height: 177px;
+  object-fit: cover;
+
+  @media (min-width: $tablet-width) {
+    max-height: 500px;
+  }
 }
 
 .video__button {
@@ -68,4 +82,12 @@
 .video__button-icon {
   fill: $white-color;
   opacity: 0.7;
+
+  &:hover {
+    opacity: 1;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
