--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -289,7 +289,7 @@
     color: $white-color;
 
     @media (min-width: $tablet-width) {
-      padding: 40px 52px 0;
+      padding: 40px 52px 0 53px;
     }
 
     @media (min-width: $desktop-width) {
