--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -17,14 +17,13 @@
   display: block;
   max-height: 48px;
   padding: 12px;
+
+  &:active .social__link-icon {
+    opacity: 0.3;
+  }
 }
 
 .social__link-icon {
   padding: 2px 0;
   fill: $white-color;
-
-  &:active {
-    padding: 2px 0;
-    opacity: 0.3;
-  }
 }
